--- a/index.html
+++ b/index.html
@@ -36,13 +36,20 @@
         }
     </script>
     <style>
-        /* Bloqueo de refresco y comportamiento elástico en móviles */
+        /* --- BLOQUEO TOTAL DE REFRESCO (Pull-to-refresh) --- */
+        html {
+            overscroll-behavior: none; /* Bloquea el rebote en el documento raíz */
+            height: 100%;
+        }
+        
         body { 
             font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; 
             background-color: #f8fafc;
-            overscroll-behavior-y: contain; /* Evita el pull-to-refresh en móviles */
-            touch-action: pan-x pan-y;
+            overscroll-behavior: none; /* Bloquea el rebote en el cuerpo */
+            height: 100%;
+            /* touch-action: pan-y; Permite scroll vertical pero bloquea gestos horizontales (swipe back) */
         }
+
         .drag-active { border-color: #0ea5e9; background-color: #f0f9ff; }
         /* Animación suave al cargar */
         .fade-in { animation: fadeIn 0.6s cubic-bezier(0.4, 0, 0.2, 1); }
